--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emoji-picker-react": "^4.4.5",
     "font-picker-react": "^3.5.2",
     "html-react-parser": "^3.0.4",
     "lodash": "^4.17.21",
