--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "emoji-picker-react": "^4.4.5",
     "font-picker-react": "^3.5.2",
     "html-react-parser": "^3.0.4",
+    "html-to-image": "^1.10.8",
     "lodash": "^4.17.21",
     "pexels": "^1.4.0",
     "react": "^18.2.0",
