--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "webpagebuilder",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/codemirror-extensions-langs": "^4.13.2",
     "@uiw/react-codemirror": "^4.13.2",
+    "axios": "^1.1.3",
     "emoji-picker-react": "^4.4.5",
     "font-picker-react": "^3.5.2",
     "html-react-parser": "^3.0.4",
@@ -18,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-google-font-loader": "^1.1.0",
     "react-lodash": "^0.1.2",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
