--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-font-loader": "^1.1.0",
+    "react-lightweight-tooltip": "^1.0.0",
     "react-lodash": "^0.1.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
